docs(agents): consolidate the JCLAW-1148 story fragments into AGENTS.md (JCLAW-1148)
Each of the nine stories wrote its prose to .claude/epic-1148-docs/<KEY>.md
so five of them would not serialize over the same file. Merged now, and the
scaffolding tree deleted.

Every Architecture fragment asked to be placed "immediately after Outbound
HTTP — OkHttp 5", having been written with no knowledge of its siblings, so
the ordering is the part that had to be decided rather than transcribed.
Three groups, each a pair or triple that reads as one topic:

- Runtime stacks with a single choke point and a ScopedValue test seam:
  Outbound HTTP (JCLAW-1151's substitutability paragraph appended to the
  existing section), Wall clock (JCLAW-1150) and Structured concurrency
  (JCLAW-1155). The ScopedValue propagation boundary is stated once, under
  AppClock, and pointed at from the HTTP paragraph rather than repeated.
- The two Error Prone gates that share one Gradle compile task: Nullness
  (JCLAW-1149) then Resource leaks (JCLAW-1156), which already opens by
  referring back to it.
- Authority: Capabilities (JCLAW-1152), the static ArchUnit allowlist for
  who may spawn a process, then Process sandboxing (JCLAW-1153), what a
  spawned process can reach — joined by one bridging sentence.

Development Commands took the two command-surface fragments: property-based
tests (JCLAW-1154) beside `play autotest`, diagnostics (JCLAW-1157) after
evals.

Two integrator decisions worth recording. JCLAW-1151's optional sentence
about `ArchitectureTest` enforcing the network rules was dropped: JCLAW-1152
moved those rules into `CapabilityRulesTest` and its table already covers
them. JCLAW-1156's trailing "note for whoever widens this" became a **To
widen it.** paragraph, matching the shape JCLAW-1149 already uses.

Verified against the merged tree rather than trusting the fragments: the 17
spawn-capability holders and the 50 frozen wall-clock entries both match
their stores, and every class name